Build debug and release

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,8 @@ jobs:
 
    container: wpilib2019
 
+   timeoutInMinutes: 0
+
    steps:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
@@ -43,6 +45,8 @@ jobs:
 
    container: wpilib2019
 
+   timeoutInMinutes: 0
+
    steps:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
@@ -70,6 +74,8 @@ jobs:
  - job: Windows_64_Bit
    pool:
     vmImage: 'vs2017-win2016'
+
+   timeoutInMinutes: 0
 
    steps:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
@@ -104,6 +110,8 @@ jobs:
    pool:
     vmImage: 'vs2017-win2016'
 
+   timeoutInMinutes: 0
+
    steps:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
@@ -136,6 +144,8 @@ jobs:
  - job: Mac
    pool:
     vmImage: 'xcode9-macos10.13'
+
+   timeoutInMinutes: 0
 
    steps:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
