--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,10 @@ ext.platformClassifier = project.platform.replaceFirst('-', '').replace('_', '-'
 ext.rootPath = Paths.get(projectDir.canonicalPath).resolve('opencv')
 ext.cmakeBuildDirectory = Paths.get(projectDir.canonicalPath).resolve('build').resolve(project.platform)
 ext.cmakeBuildSharedDirectory = Paths.get(projectDir.canonicalPath).resolve('buildShared').resolve(project.platform)
+
+ext.cmakeBuildDebugDirectory = Paths.get(projectDir.canonicalPath).resolve('buildDebug').resolve(project.platform)
+ext.cmakeBuildSharedDebugDirectory = Paths.get(projectDir.canonicalPath).resolve('buildSharedDebug').resolve(project.platform)
+
 ext.jarName = "opencv-${project.libVersion}.jar"
 ext.pathToOpenCVJar = ext.cmakeBuildDirectory.resolve("bin").resolve(ext.jarName)
 
@@ -157,7 +161,9 @@ repositories {
 }
 
 ['': project.cmakeBuildDirectory,
- 'Shared': project.cmakeBuildSharedDirectory
+ 'Shared': project.cmakeBuildSharedDirectory,
+ 'Debug': project.cmakeBuildDebugDirectory,
+ 'SharedDebug': project.cmakeBuildSharedDebugDirectory
 ].each{ buildType, buildDirectory ->
     project.tasks.create('cmake' + buildType, Exec) {
         inputs.dir 'opencv'
@@ -169,11 +175,18 @@ repositories {
         def cmakeArgs = {
             def toolchain = null
             def args = defaultCmakeArgs
-            if (buildType == "Shared") {
+            if (buildType.contains("Shared")) {
                 args = args + '-DBUILD_SHARED_LIBS=ON'
             } else {
                 args = args + '-DBUILD_SHARED_LIBS=OFF'
             }
+
+            if (buildType.contains('Debug')) {
+                args = args + '-DCMAKE_BUILD_TYPE=Debug'
+            } else {
+                args = args + '-DCMAKE_BUILD_TYPE=Release'
+            }
+
             if (hasProperty('toolchain')) {
                 toolchain = project.toolchain
             }
@@ -213,9 +226,11 @@ repositories {
         workingDir buildDirectory.toString()
         def processors = Runtime.runtime.availableProcessors()
 
+        def debug = buildType.contains('Debug') ? 'Debug' : 'Release'
+
         if (project.platform.startsWith("windows")) {
             executable 'cmd'
-            args = ['/c', 'msbuild', '/m', 'OpenCV.sln', '/t:Build', '/p:Configuration=Release', '/v:m', project.platform == "windows-x86" ? '/p:Platform=win32' : '']
+            args = ['/c', 'msbuild', '/m', 'OpenCV.sln', '/t:Build', "/p:Configuration=${debug}".toString(), '/v:m', project.platform == "windows-x86" ? '/p:Platform=win32' : '']
             inputs.file buildDirectory.resolve("OpenCV.sln").toFile()
         } else {
             executable 'make'
@@ -284,6 +299,8 @@ repositories {
 
 build.dependsOn make
 build.dependsOn makeShared
+build.dependsOn makeDebug
+build.dependsOn makeSharedDebug
 
 apply from: 'publish.gradle'
 
