--- a/config.gradle
+++ b/config.gradle
@@ -24,3 +24,30 @@ ext.createAllCombined = { list, name, base, type, project ->
     return task
 
 }
+
+ext.createAllCombinedDebug = { list, name, base, type, project ->
+    def outputsFolder = file("$project.buildDir/outputs")
+    def task = project.tasks.create(base + '-alldebug', type) {
+        description = 'Creates component archive for all classifiers'
+        destinationDir = outputsFolder
+        classifier = 'alldebug'
+        baseName = base
+        duplicatesStrategy = 'exclude'
+
+        list.each {
+            it.outputs.files.each {
+                from project.zipTree(it)
+            }
+            dependsOn it
+        }
+    }
+
+    project.build.dependsOn task
+
+    project.artifacts {
+        task
+    }
+
+    return task
+
+}
